[metadata]
name = pwn_utils
version = 0.0.1
url = https://github.com/zolutal/pwn_utils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
description = A collection of scripts for pwning
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    docker
python_requires = >= 3.8
packages = find_namespace:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dwninit = pwn_utils.dwninit:main
